# crafting-interpreters

./: README.md
dishwasher_salmon/: Makefile
dishwasher_salmon/include/: bytecode.h  common.h  debug.h  memory.h  panic.h
dishwasher_salmon/include/ds/: bytecode.h  common.h  compiler.h  debug.h  lexer.h  memory.h  panic.h  value.h  vector.h  vm.h
dishwasher_salmon/src/: bytecode.c  compiler.c  debug.c  lexer.c  main.c  value.c  vm.c
examples/: bad_99.lox  close_over_loop_var.lox  even_odd.lox  everything.lox  evil.lox  list.lox  time_loop.lox
loxide/src/: builtins.rs  env.rs  error.rs  interpreter.rs  lex.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  srcloc.rs  syntax.rs  value.rs
saumon_fumé/: dune-project  saumon_fume.opam
saumon_fumé/lib/: builtin.ml  builtin.mli  dune  env.ml  env.mli  error.ml  error.mli  interpreter.ml  interpreter.mli  lexical.ml  lexical.mli  located.ml  located.mli  option_monad.ml  option_monad.mli  parser.ml  parser.mli  resolver.ml  resolver.mli  result_monad.ml  result_monad.mli  state_monad.ml  state_monad.mli  syntax.ml  syntax.mli  value.ml  value.mli
surimi/: Builtins.cs  ErrorReporter.cs  Interpreter.cs  Lexical.cs  Main.cs  Parser.cs  PeekableStream.cs  PrettyPrinter.cs  Resolver.cs  Syntax.cs  Visitor.cs
